--- a/Faveo Helpdesk Pro/NotificationTableViewCell.xib
+++ b/Faveo Helpdesk Pro/NotificationTableViewCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -81,6 +82,7 @@
                 <outlet property="name" destination="Ckd-Id-tc5" id="Hjm-Gy-Y7I"/>
                 <outlet property="profilePicView" destination="53O-dF-h8M" id="98B-Ba-c6R"/>
                 <outlet property="timelbl" destination="XGS-gO-zvq" id="Yp9-et-FW1"/>
+                <outlet property="viewMain" destination="hCG-1y-fMS" id="DJD-Vd-QGP"/>
             </connections>
             <point key="canvasLocation" x="23" y="-14"/>
         </tableViewCell>
