--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -1534,7 +1534,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zfg-9p-cOW" id="Ioi-Of-tAX">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="74.666666666666671"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -4664,6 +4664,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2lS-q8-C4n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2430" y="1255"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="0fo-27-Mf6">
+            <objects>
+                <viewController id="kAQ-vK-tJe" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RMy-x8-eZW"/>
+                        <viewControllerLayoutGuide type="bottom" id="Muo-3V-ZC9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KA8-TC-5FE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="neU-78-HFs">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="neU-78-HFs" firstAttribute="leading" secondItem="KA8-TC-5FE" secondAttribute="leading" id="9I0-N4-PqY"/>
+                            <constraint firstItem="neU-78-HFs" firstAttribute="bottom" secondItem="Muo-3V-ZC9" secondAttribute="top" id="k83-jy-hrA"/>
+                            <constraint firstAttribute="trailing" secondItem="neU-78-HFs" secondAttribute="trailing" id="ktU-R2-iTx"/>
+                            <constraint firstItem="neU-78-HFs" firstAttribute="top" secondItem="KA8-TC-5FE" secondAttribute="top" id="nYm-hO-4Kv"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CUn-0p-6ig" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2786.9565217391305" y="1254.6195652173915"/>
         </scene>
         <!--Merge View Form-->
         <scene sceneID="j4e-qS-sPJ">
